# ranged_bitset

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RangedBitSetConstants.h  RangedBitSetConstants.hpp  RangedBitset.h  RangedBitset.hpp
.github/workflows/: main.yml
internal/: RangedBitSetConstants.hpp  RangedBitset.tpp
tests/: one_word.cc  three_word.cc  two_word.cc
